--- a/pixshare/frontend/.env
+++ b/pixshare/frontend/.env
@@ -1,2 +1,3 @@
-VITE_API_URL=http://localhost:5172/api
-# VITE_API_URL=http://10.104.10.149:5172/api
+# VITE_API_URL=http://localhost:5173/api
+# VITE_API_URL=http://10.0.0.244:5172
+VITE_API_URL = /api
